deployment/manifests/pyapiweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapi
  labels:
    app: pyapi
spec:
  selector:
    matchLabels:
      app: pyapi
      tier: web
  template:
    metadata:
      labels:
        app: pyapi
        tier: web
    spec:
      containers:
      - name: pyapi
        image: gcr.io/${PROJECT_ID}/simple_python_rest_api:1.0.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5002
