deployment/manifests/pyapiweb-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyapiweb
  labels:
    app: pyapi
spec:
  selector:
    app: pyapi
    tier: web
  ports:
  - port: 80
    targetPort: 5002
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
