deployment/manifests/pyapiweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyapiweb
  labels:
    app: pyapi
spec:
  selector:
    app: pyapi
    tier: web
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5002
